--------------------------------------------------------------------------------
drkns 2024-02-17 12:06:08+00:00 - build 6275

1. gh-799: Issue with left mouse click outside of autocomplete history list.

2. gh-800: Backspace does not open user menu of parent folder.

--------------------------------------------------------------------------------
drkns 2024-02-16 00:38:30+00:00 - build 6274

1. Rework OS commands parsing. Should fix gh-792 and gh-798 too.

2. Refactoring, tests

--------------------------------------------------------------------------------
drkns 2024-02-12 20:23:32+00:00 - build 6273

1. gh-796 and other folder shortcuts improvements:
   - RCtrl+<N> in folder shortcuts menu works the same as Down
   - RCtrl+<N> in folder shortcuts menu switches to the corresponding list if needed
   - If there are no shortcuts assigned to RCtrl+<N>, an empty menu will pop up.

--------------------------------------------------------------------------------
drkns 2024-02-12 01:52:41+00:00 - build 6272

1. gh-795: FindFile Trap.

--------------------------------------------------------------------------------
MZK 2024-02-10 13:13:13-08:00 - build 6271

1. `Ctrl+Numpad5` in Editor menu "All matching entries" vertically aligns
   found text in all items. To preserve vertical alignment while scrolling items
   horizontally, the items can be moved beyond the left or right window edges.

--------------------------------------------------------------------------------
drkns 2024-02-10 14:45:04+00:00 - build 6270

1. Refactoring.

2. Improve encoding diagnostics.

3. Correction of 6251.

4. gh-794: Dangling pointer deref in dialog autocompletion after DM_LISTSET & likely other list modifications.

--------------------------------------------------------------------------------
drkns 2024-02-05 00:21:12+00:00 - build 6269

1. Correction of 6267.

--------------------------------------------------------------------------------
rohitab 2024-02-04 15:53:24+11:00 - build 6268